src/rules.output
Terminals unused in grammar

   DOT


Grammar

    0 $accept: configuration $end

    1 configuration: /* empty */
    2              | configuration config
    3              | configuration module
    4              | configuration target

    5 config: CONFIGURATION OPEN parameters END

    6 parameters: /* empty */
    7           | parameters parameter SEMICOLON

    8 parameter: WORD EQ WORD
    9          | WORD EQ EXPR
   10          | WORD EQ NUMBER
   11          | WORD EQ QUOTE honeynet QUOTE

   12 module: MODULE QUOTE WORD QUOTE OPEN settings END

   13 settings: /* empty */
   14         | settings WORD EQ WORD SEMICOLON
   15         | settings WORD EQ EXPR SEMICOLON
   16         | settings WORD EQ NUMBER SEMICOLON

   17 target: TARGET OPEN rule END

   18 rule: /* empty */
   19     | rule FILTER QUOTE equation QUOTE SEMICOLON
   20     | rule FRONTEND honeynet SEMICOLON
   21     | rule FRONTEND honeynet QUOTE equation QUOTE SEMICOLON
   22     | rule BACKPICK QUOTE equation QUOTE SEMICOLON
   23     | rule BACKEND honeynet SEMICOLON
   24     | rule BACKEND honeynet QUOTE equation QUOTE SEMICOLON
   25     | rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE SEMICOLON
   26     | rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE QUOTE equation QUOTE SEMICOLON
   27     | rule LIMIT QUOTE equation QUOTE SEMICOLON

   28 honeynet: EXPR

   29 equation: /* empty */
   30         | equation WORD
   31         | equation NUMBER
   32         | equation EXPR
   33         | equation EQ


Terminals, with rules where they appear

$end (0) 0
error (256)
OPEN (258) 5 12 17
END (259) 5 12 17
SEMICOLON (260) 7 14 15 16 19 20 21 22 23 24 25 26 27
QUOTE (261) 11 12 19 21 22 24 25 26 27
DOT (262)
MODULE (263) 12
FILTER (264) 19
FRONTEND (265) 20 21
BACKEND (266) 23 24 25 26
BACKPICK (267) 22
LIMIT (268) 27
CONFIGURATION (269) 5
TARGET (270) 17
NUMBER (271) 10 16 31
WORD (272) 8 9 10 11 12 14 15 16 30
EQ (273) 8 9 10 11 14 15 16 33
EXPR (274) 9 15 28 32


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
configuration (21)
    on left: 1 2 3 4, on right: 0 2 3 4
config (22)
    on left: 5, on right: 2
parameters (23)
    on left: 6 7, on right: 5 7
parameter (24)
    on left: 8 9 10 11, on right: 7
module (25)
    on left: 12, on right: 3
settings (26)
    on left: 13 14 15 16, on right: 12 14 15 16
target (27)
    on left: 17, on right: 4
rule (28)
    on left: 18 19 20 21 22 23 24 25 26 27, on right: 17 19 20 21 22
    23 24 25 26 27
honeynet (29)
    on left: 28, on right: 11 20 21 23 24 25 26
equation (30)
    on left: 29 30 31 32 33, on right: 19 21 22 24 25 26 27 30 31 32
    33


state 0

    0 $accept: . configuration $end

    $default  reduce using rule 1 (configuration)

    configuration  go to state 1


state 1

    0 $accept: configuration . $end
    2 configuration: configuration . config
    3              | configuration . module
    4              | configuration . target

    $end           shift, and go to state 2
    MODULE         shift, and go to state 3
    CONFIGURATION  shift, and go to state 4
    TARGET         shift, and go to state 5

    config  go to state 6
    module  go to state 7
    target  go to state 8


state 2

    0 $accept: configuration $end .

    $default  accept


state 3

   12 module: MODULE . QUOTE WORD QUOTE OPEN settings END

    QUOTE  shift, and go to state 9


state 4

    5 config: CONFIGURATION . OPEN parameters END

    OPEN  shift, and go to state 10


state 5

   17 target: TARGET . OPEN rule END

    OPEN  shift, and go to state 11


state 6

    2 configuration: configuration config .

    $default  reduce using rule 2 (configuration)


state 7

    3 configuration: configuration module .

    $default  reduce using rule 3 (configuration)


state 8

    4 configuration: configuration target .

    $default  reduce using rule 4 (configuration)


state 9

   12 module: MODULE QUOTE . WORD QUOTE OPEN settings END

    WORD  shift, and go to state 12


state 10

    5 config: CONFIGURATION OPEN . parameters END

    $default  reduce using rule 6 (parameters)

    parameters  go to state 13


state 11

   17 target: TARGET OPEN . rule END

    $default  reduce using rule 18 (rule)

    rule  go to state 14


state 12

   12 module: MODULE QUOTE WORD . QUOTE OPEN settings END

    QUOTE  shift, and go to state 15


state 13

    5 config: CONFIGURATION OPEN parameters . END
    7 parameters: parameters . parameter SEMICOLON

    END   shift, and go to state 16
    WORD  shift, and go to state 17

    parameter  go to state 18


state 14

   17 target: TARGET OPEN rule . END
   19 rule: rule . FILTER QUOTE equation QUOTE SEMICOLON
   20     | rule . FRONTEND honeynet SEMICOLON
   21     | rule . FRONTEND honeynet QUOTE equation QUOTE SEMICOLON
   22     | rule . BACKPICK QUOTE equation QUOTE SEMICOLON
   23     | rule . BACKEND honeynet SEMICOLON
   24     | rule . BACKEND honeynet QUOTE equation QUOTE SEMICOLON
   25     | rule . BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE SEMICOLON
   26     | rule . BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE QUOTE equation QUOTE SEMICOLON
   27     | rule . LIMIT QUOTE equation QUOTE SEMICOLON

    END       shift, and go to state 19
    FILTER    shift, and go to state 20
    FRONTEND  shift, and go to state 21
    BACKEND   shift, and go to state 22
    BACKPICK  shift, and go to state 23
    LIMIT     shift, and go to state 24


state 15

   12 module: MODULE QUOTE WORD QUOTE . OPEN settings END

    OPEN  shift, and go to state 25


state 16

    5 config: CONFIGURATION OPEN parameters END .

    $default  reduce using rule 5 (config)


state 17

    8 parameter: WORD . EQ WORD
    9          | WORD . EQ EXPR
   10          | WORD . EQ NUMBER
   11          | WORD . EQ QUOTE honeynet QUOTE

    EQ  shift, and go to state 26


state 18

    7 parameters: parameters parameter . SEMICOLON

    SEMICOLON  shift, and go to state 27


state 19

   17 target: TARGET OPEN rule END .

    $default  reduce using rule 17 (target)


state 20

   19 rule: rule FILTER . QUOTE equation QUOTE SEMICOLON

    QUOTE  shift, and go to state 28


state 21

   20 rule: rule FRONTEND . honeynet SEMICOLON
   21     | rule FRONTEND . honeynet QUOTE equation QUOTE SEMICOLON

    EXPR  shift, and go to state 29

    honeynet  go to state 30


state 22

   23 rule: rule BACKEND . honeynet SEMICOLON
   24     | rule BACKEND . honeynet QUOTE equation QUOTE SEMICOLON
   25     | rule BACKEND . QUOTE equation QUOTE honeynet QUOTE equation QUOTE SEMICOLON
   26     | rule BACKEND . QUOTE equation QUOTE honeynet QUOTE equation QUOTE QUOTE equation QUOTE SEMICOLON

    QUOTE  shift, and go to state 31
    EXPR   shift, and go to state 29

    honeynet  go to state 32


state 23

   22 rule: rule BACKPICK . QUOTE equation QUOTE SEMICOLON

    QUOTE  shift, and go to state 33


state 24

   27 rule: rule LIMIT . QUOTE equation QUOTE SEMICOLON

    QUOTE  shift, and go to state 34


state 25

   12 module: MODULE QUOTE WORD QUOTE OPEN . settings END

    $default  reduce using rule 13 (settings)

    settings  go to state 35


state 26

    8 parameter: WORD EQ . WORD
    9          | WORD EQ . EXPR
   10          | WORD EQ . NUMBER
   11          | WORD EQ . QUOTE honeynet QUOTE

    QUOTE   shift, and go to state 36
    NUMBER  shift, and go to state 37
    WORD    shift, and go to state 38
    EXPR    shift, and go to state 39


state 27

    7 parameters: parameters parameter SEMICOLON .

    $default  reduce using rule 7 (parameters)


state 28

   19 rule: rule FILTER QUOTE . equation QUOTE SEMICOLON

    $default  reduce using rule 29 (equation)

    equation  go to state 40


state 29

   28 honeynet: EXPR .

    $default  reduce using rule 28 (honeynet)


state 30

   20 rule: rule FRONTEND honeynet . SEMICOLON
   21     | rule FRONTEND honeynet . QUOTE equation QUOTE SEMICOLON

    SEMICOLON  shift, and go to state 41
    QUOTE      shift, and go to state 42


state 31

   25 rule: rule BACKEND QUOTE . equation QUOTE honeynet QUOTE equation QUOTE SEMICOLON
   26     | rule BACKEND QUOTE . equation QUOTE honeynet QUOTE equation QUOTE QUOTE equation QUOTE SEMICOLON

    $default  reduce using rule 29 (equation)

    equation  go to state 43


state 32

   23 rule: rule BACKEND honeynet . SEMICOLON
   24     | rule BACKEND honeynet . QUOTE equation QUOTE SEMICOLON

    SEMICOLON  shift, and go to state 44
    QUOTE      shift, and go to state 45


state 33

   22 rule: rule BACKPICK QUOTE . equation QUOTE SEMICOLON

    $default  reduce using rule 29 (equation)

    equation  go to state 46


state 34

   27 rule: rule LIMIT QUOTE . equation QUOTE SEMICOLON

    $default  reduce using rule 29 (equation)

    equation  go to state 47


state 35

   12 module: MODULE QUOTE WORD QUOTE OPEN settings . END
   14 settings: settings . WORD EQ WORD SEMICOLON
   15         | settings . WORD EQ EXPR SEMICOLON
   16         | settings . WORD EQ NUMBER SEMICOLON

    END   shift, and go to state 48
    WORD  shift, and go to state 49


state 36

   11 parameter: WORD EQ QUOTE . honeynet QUOTE

    EXPR  shift, and go to state 29

    honeynet  go to state 50


state 37

   10 parameter: WORD EQ NUMBER .

    $default  reduce using rule 10 (parameter)


state 38

    8 parameter: WORD EQ WORD .

    $default  reduce using rule 8 (parameter)


state 39

    9 parameter: WORD EQ EXPR .

    $default  reduce using rule 9 (parameter)


state 40

   19 rule: rule FILTER QUOTE equation . QUOTE SEMICOLON
   30 equation: equation . WORD
   31         | equation . NUMBER
   32         | equation . EXPR
   33         | equation . EQ

    QUOTE   shift, and go to state 51
    NUMBER  shift, and go to state 52
    WORD    shift, and go to state 53
    EQ      shift, and go to state 54
    EXPR    shift, and go to state 55


state 41

   20 rule: rule FRONTEND honeynet SEMICOLON .

    $default  reduce using rule 20 (rule)


state 42

   21 rule: rule FRONTEND honeynet QUOTE . equation QUOTE SEMICOLON

    $default  reduce using rule 29 (equation)

    equation  go to state 56


state 43

   25 rule: rule BACKEND QUOTE equation . QUOTE honeynet QUOTE equation QUOTE SEMICOLON
   26     | rule BACKEND QUOTE equation . QUOTE honeynet QUOTE equation QUOTE QUOTE equation QUOTE SEMICOLON
   30 equation: equation . WORD
   31         | equation . NUMBER
   32         | equation . EXPR
   33         | equation . EQ

    QUOTE   shift, and go to state 57
    NUMBER  shift, and go to state 52
    WORD    shift, and go to state 53
    EQ      shift, and go to state 54
    EXPR    shift, and go to state 55


state 44

   23 rule: rule BACKEND honeynet SEMICOLON .

    $default  reduce using rule 23 (rule)


state 45

   24 rule: rule BACKEND honeynet QUOTE . equation QUOTE SEMICOLON

    $default  reduce using rule 29 (equation)

    equation  go to state 58


state 46

   22 rule: rule BACKPICK QUOTE equation . QUOTE SEMICOLON
   30 equation: equation . WORD
   31         | equation . NUMBER
   32         | equation . EXPR
   33         | equation . EQ

    QUOTE   shift, and go to state 59
    NUMBER  shift, and go to state 52
    WORD    shift, and go to state 53
    EQ      shift, and go to state 54
    EXPR    shift, and go to state 55


state 47

   27 rule: rule LIMIT QUOTE equation . QUOTE SEMICOLON
   30 equation: equation . WORD
   31         | equation . NUMBER
   32         | equation . EXPR
   33         | equation . EQ

    QUOTE   shift, and go to state 60
    NUMBER  shift, and go to state 52
    WORD    shift, and go to state 53
    EQ      shift, and go to state 54
    EXPR    shift, and go to state 55


state 48

   12 module: MODULE QUOTE WORD QUOTE OPEN settings END .

    $default  reduce using rule 12 (module)


state 49

   14 settings: settings WORD . EQ WORD SEMICOLON
   15         | settings WORD . EQ EXPR SEMICOLON
   16         | settings WORD . EQ NUMBER SEMICOLON

    EQ  shift, and go to state 61


state 50

   11 parameter: WORD EQ QUOTE honeynet . QUOTE

    QUOTE  shift, and go to state 62


state 51

   19 rule: rule FILTER QUOTE equation QUOTE . SEMICOLON

    SEMICOLON  shift, and go to state 63


state 52

   31 equation: equation NUMBER .

    $default  reduce using rule 31 (equation)


state 53

   30 equation: equation WORD .

    $default  reduce using rule 30 (equation)


state 54

   33 equation: equation EQ .

    $default  reduce using rule 33 (equation)


state 55

   32 equation: equation EXPR .

    $default  reduce using rule 32 (equation)


state 56

   21 rule: rule FRONTEND honeynet QUOTE equation . QUOTE SEMICOLON
   30 equation: equation . WORD
   31         | equation . NUMBER
   32         | equation . EXPR
   33         | equation . EQ

    QUOTE   shift, and go to state 64
    NUMBER  shift, and go to state 52
    WORD    shift, and go to state 53
    EQ      shift, and go to state 54
    EXPR    shift, and go to state 55


state 57

   25 rule: rule BACKEND QUOTE equation QUOTE . honeynet QUOTE equation QUOTE SEMICOLON
   26     | rule BACKEND QUOTE equation QUOTE . honeynet QUOTE equation QUOTE QUOTE equation QUOTE SEMICOLON

    EXPR  shift, and go to state 29

    honeynet  go to state 65


state 58

   24 rule: rule BACKEND honeynet QUOTE equation . QUOTE SEMICOLON
   30 equation: equation . WORD
   31         | equation . NUMBER
   32         | equation . EXPR
   33         | equation . EQ

    QUOTE   shift, and go to state 66
    NUMBER  shift, and go to state 52
    WORD    shift, and go to state 53
    EQ      shift, and go to state 54
    EXPR    shift, and go to state 55


state 59

   22 rule: rule BACKPICK QUOTE equation QUOTE . SEMICOLON

    SEMICOLON  shift, and go to state 67


state 60

   27 rule: rule LIMIT QUOTE equation QUOTE . SEMICOLON

    SEMICOLON  shift, and go to state 68


state 61

   14 settings: settings WORD EQ . WORD SEMICOLON
   15         | settings WORD EQ . EXPR SEMICOLON
   16         | settings WORD EQ . NUMBER SEMICOLON

    NUMBER  shift, and go to state 69
    WORD    shift, and go to state 70
    EXPR    shift, and go to state 71


state 62

   11 parameter: WORD EQ QUOTE honeynet QUOTE .

    $default  reduce using rule 11 (parameter)


state 63

   19 rule: rule FILTER QUOTE equation QUOTE SEMICOLON .

    $default  reduce using rule 19 (rule)


state 64

   21 rule: rule FRONTEND honeynet QUOTE equation QUOTE . SEMICOLON

    SEMICOLON  shift, and go to state 72


state 65

   25 rule: rule BACKEND QUOTE equation QUOTE honeynet . QUOTE equation QUOTE SEMICOLON
   26     | rule BACKEND QUOTE equation QUOTE honeynet . QUOTE equation QUOTE QUOTE equation QUOTE SEMICOLON

    QUOTE  shift, and go to state 73


state 66

   24 rule: rule BACKEND honeynet QUOTE equation QUOTE . SEMICOLON

    SEMICOLON  shift, and go to state 74


state 67

   22 rule: rule BACKPICK QUOTE equation QUOTE SEMICOLON .

    $default  reduce using rule 22 (rule)


state 68

   27 rule: rule LIMIT QUOTE equation QUOTE SEMICOLON .

    $default  reduce using rule 27 (rule)


state 69

   16 settings: settings WORD EQ NUMBER . SEMICOLON

    SEMICOLON  shift, and go to state 75


state 70

   14 settings: settings WORD EQ WORD . SEMICOLON

    SEMICOLON  shift, and go to state 76


state 71

   15 settings: settings WORD EQ EXPR . SEMICOLON

    SEMICOLON  shift, and go to state 77


state 72

   21 rule: rule FRONTEND honeynet QUOTE equation QUOTE SEMICOLON .

    $default  reduce using rule 21 (rule)


state 73

   25 rule: rule BACKEND QUOTE equation QUOTE honeynet QUOTE . equation QUOTE SEMICOLON
   26     | rule BACKEND QUOTE equation QUOTE honeynet QUOTE . equation QUOTE QUOTE equation QUOTE SEMICOLON

    $default  reduce using rule 29 (equation)

    equation  go to state 78


state 74

   24 rule: rule BACKEND honeynet QUOTE equation QUOTE SEMICOLON .

    $default  reduce using rule 24 (rule)


state 75

   16 settings: settings WORD EQ NUMBER SEMICOLON .

    $default  reduce using rule 16 (settings)


state 76

   14 settings: settings WORD EQ WORD SEMICOLON .

    $default  reduce using rule 14 (settings)


state 77

   15 settings: settings WORD EQ EXPR SEMICOLON .

    $default  reduce using rule 15 (settings)


state 78

   25 rule: rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation . QUOTE SEMICOLON
   26     | rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation . QUOTE QUOTE equation QUOTE SEMICOLON
   30 equation: equation . WORD
   31         | equation . NUMBER
   32         | equation . EXPR
   33         | equation . EQ

    QUOTE   shift, and go to state 79
    NUMBER  shift, and go to state 52
    WORD    shift, and go to state 53
    EQ      shift, and go to state 54
    EXPR    shift, and go to state 55


state 79

   25 rule: rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE . SEMICOLON
   26     | rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE . QUOTE equation QUOTE SEMICOLON

    SEMICOLON  shift, and go to state 80
    QUOTE      shift, and go to state 81


state 80

   25 rule: rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE SEMICOLON .

    $default  reduce using rule 25 (rule)


state 81

   26 rule: rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE QUOTE . equation QUOTE SEMICOLON

    $default  reduce using rule 29 (equation)

    equation  go to state 82


state 82

   26 rule: rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE QUOTE equation . QUOTE SEMICOLON
   30 equation: equation . WORD
   31         | equation . NUMBER
   32         | equation . EXPR
   33         | equation . EQ

    QUOTE   shift, and go to state 83
    NUMBER  shift, and go to state 52
    WORD    shift, and go to state 53
    EQ      shift, and go to state 54
    EXPR    shift, and go to state 55


state 83

   26 rule: rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE QUOTE equation QUOTE . SEMICOLON

    SEMICOLON  shift, and go to state 84


state 84

   26 rule: rule BACKEND QUOTE equation QUOTE honeynet QUOTE equation QUOTE QUOTE equation QUOTE SEMICOLON .

    $default  reduce using rule 26 (rule)
